# sums

./: .gitignore  README.md  lib.py  pyproject.toml  requirements.txt  riddles.html  streamlit.py
examples/: quiz_app.py  simple.py  simple2.py  streamlit.py
src/sumchef/: __init__.py
